--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,20 @@
 <html>
 
 <head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="/static/stylesheet.css">
+	<title>hive</title>
 </head>
 
 <body>
-	<h1>Lunh Checksum</h1>
-	<form method="POST", action="/checksum">
-		<input type="text" name="number" placeholder="WWWWXXXXYYYYZZZZ"><br>
-		<input type="submit" value="Verify credit card number">
-	</form>
-	<p>{{ message }}</p>
+	<div class="center">
+		<h1>Lunh Checksum</h1>
+		<form method="POST", action="/checksum">
+			<input type="text" name="number" placeholder="WWWWXXXXYYYYZZZZ"><br>
+			<input type="submit" value="Verify credit card number">
+		</form>
+		<p id="message">{{ message }}</p>
+	</div>
 </body>
 
 </html>
